Fix high contrast issue in dashboard

--- a/app/themes/high-contrast/custom.scss
+++ b/app/themes/high-contrast/custom.scss
@@ -443,6 +443,6 @@ tg-project-menu {
 // DASHBOARD
 .home-wrapper {
     .title-bar {
-        color: $white;
+        color: $black;
     }
 }
